--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -16,4 +16,9 @@
     -->
   </PropertyGroup>
 
+  <ItemGroup>
+    <Using Include="Altinn.App.Tests.Common" />
+    <Using Include="Altinn.App.Tests.Common.Auth" />
+  </ItemGroup>
+
 </Project>
