Update nuget depencencies
Notable changes
* Changed from Microsoft.CodeAnalysis.Workspaces to Microsoft.CodeAnalysis.CSharp, in Inernal.Analyzers because of a compiller warning
see: https://github.com/dotnet/roslyn-analyzers/blob/main/docs/rules/RS1038.md
* Updated SDK reference in global.json
* Updated Applicationinsights package and removed the test from https://github.com/Altinn/app-lib-dotnet/pull/594
* Updated to released version of HybridCache and remove #pragma waring disable for preview
* Used [CallerFilePath] intead of assemly location to find test data folder.

--- a/src/Altinn.App.Internal.Analyzers/Altinn.App.Internal.Analyzers.csproj
+++ b/src/Altinn.App.Internal.Analyzers/Altinn.App.Internal.Analyzers.csproj
@@ -24,17 +24,17 @@
     <AdditionalFiles Include="AnalyzerReleases.Unshipped.md" />
   </ItemGroup>
 
-  <!-- 
+  <!--
     NOTE:
     InternalsVisibleTo messes with PolySharp, which we use to support newer C# features in analyzer code (such as records)
-    So it is disabled currently and relevant members in analyzer code are public instead 
+    So it is disabled currently and relevant members in analyzer code are public instead
    -->
   <!-- <ItemGroup>
     <InternalsVisibleTo Include="Altinn.App.Analyzers.Tests" />
   </ItemGroup> -->
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" PrivateAssets="all" Version="4.1.0" />
-    <PackageReference Include="PolySharp" Version="1.14.1" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" PrivateAssets="all" />
+    <PackageReference Include="PolySharp" Version="1.15.0" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
   </ItemGroup>
 </Project>
