Fix broken build
* Don't reference CS files outside of the folder. It seems to extend the search path when copying files to the build directory casusing build errors.
* Move global usings for test projects to the individual test projects
  * The current layout means that the build fails when adding a new test project before referencing Altinn.App.Tests.Common

--- a/test/Altinn.App.Api.Tests/Altinn.App.Api.Tests.csproj
+++ b/test/Altinn.App.Api.Tests/Altinn.App.Api.Tests.csproj
@@ -27,6 +27,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Using Include="Altinn.App.Tests.Common" />
+    <Using Include="Altinn.App.Tests.Common.Auth" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="../../src/Altinn.App.Api/Altinn.App.Api.csproj" />
 
     <!-- <ProjectReference Include="../../src/Altinn.App.Api/Altinn.App.Api.csproj">
@@ -35,7 +40,4 @@
     <ProjectReference Include="../Altinn.App.Tests.Common/Altinn.App.Tests.Common.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Compile Include="../Altinn.App.Tests.Common/ModuleInitializer.cs" />
-  </ItemGroup>
 </Project>
