--- a/test/Altinn.App.Core.Tests/Altinn.App.Core.Tests.csproj
+++ b/test/Altinn.App.Core.Tests/Altinn.App.Core.Tests.csproj
@@ -50,7 +50,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="../Altinn.App.Tests.Common/ModuleInitializer.cs" />
+    <Using Include="Altinn.App.Tests.Common" />
+    <Using Include="Altinn.App.Tests.Common.Auth" />
   </ItemGroup>
 
   <ItemGroup>
