Use [CallerFilePath] instead of <Content Include in tests
This is the same techinque used by VerifyTests, so we could just use it universally.

2 files is referenced using current Directory in app code, and requires more consideration
* applicationmetadata.json in StartupHelper (normal IAppMetadata can be overridden)
* secrets.json

--- a/test/Altinn.App.Tests.Common/Altinn.App.Tests.Common.csproj
+++ b/test/Altinn.App.Tests.Common/Altinn.App.Tests.Common.csproj
@@ -33,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="TestResources/**">
+    <Content Include="TestResources/**/*.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <LinkBase>/</LinkBase>
       <Link>/%(RecursiveDir)%(Filename)%(Extension)</Link>
