--- a/src/Altinn.App.Core/Altinn.App.Core.csproj
+++ b/src/Altinn.App.Core/Altinn.App.Core.csproj
@@ -10,14 +10,12 @@
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
+
   <ItemGroup>
-    <PackageReference Include="Altinn.ApiClients.Maskinporten" Version="9.2.1" />
-    <PackageReference Include="Altinn.Common.AccessTokenClient" Version="1.1.5" />
-    <PackageReference Include="Altinn.Common.EFormidlingClient" Version="1.3.3" />
-    <PackageReference Include="Altinn.Common.PEP" Version="4.1.2" />
-    <PackageReference Include="Altinn.Platform.Models" Version="1.6.1" />
-    <PackageReference Include="Altinn.Platform.Storage.Interface" Version="4.0.6" />
-    <PackageReference Include="JsonPatch.Net" Version="3.3.0" />
+    <!-- The following packages uses frozen version because of compatibility considerations for apps -->
+    <!-- See: https://github.com/Altinn/app-lib-dotnet/issues/647 -->
+    <PackageReference Include="Altinn.ApiClients.Maskinporten" Version="8.0.1" />
+
     <PackageReference Include="JWTCookieAuthentication" Version="3.0.1" />
     <!-- The follwoing are depencencies for JWTCookieAuthentication, but we need newer versions-->
     <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="8.7.0" />
@@ -25,6 +23,17 @@
     <PackageReference Include="Microsoft.Rest.ClientRuntime.Azure" Version="3.3.19" />
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
     <!-- End JWTCookieAuthentication deps -->
+
+    <PackageReference Include="Altinn.Common.AccessTokenClient" Version="1.1.5" />
+    <!-- End frozen versions -->
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Altinn.Common.EFormidlingClient" Version="1.3.3" />
+    <PackageReference Include="Altinn.Common.PEP" Version="4.1.2" />
+    <PackageReference Include="Altinn.Platform.Models" Version="1.6.1" />
+    <PackageReference Include="Altinn.Platform.Storage.Interface" Version="4.0.6" />
+    <PackageReference Include="JsonPatch.Net" Version="3.3.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.23.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Hybrid" Version="9.3.0" />
     <PackageReference Include="Microsoft.FeatureManagement.AspNetCore" Version="4.0.0" />
