Prepare for System.Text.Json, codesmell analyzer

--- a/test/Altinn.App.Analyzers.Tests/testapp/App/App.csproj
+++ b/test/Altinn.App.Analyzers.Tests/testapp/App/App.csproj
@@ -20,6 +20,8 @@
   <ItemGroup>
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\script\" />
+
+    <Compile Remove="additional/*.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Update="config\process\process.bpmn">
