--- a/src/Altinn.App.Analyzers/Altinn.App.Analyzers.csproj
+++ b/src/Altinn.App.Analyzers/Altinn.App.Analyzers.csproj
@@ -38,16 +38,16 @@
     <PackageReference Include="PolySharp" Version="1.15.0" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
     <PackageReference Include="SvSoft.Analyzers.ClosedTypeHierarchyDiagnosticSuppression" Version="1.1.1"  PrivateAssets="All" />
 
-    <PackageReference Include="Newtonsoft.Json" GeneratePathProperty="true" Version="13.0.3" />
-    <None Include="$(PKGNewtonsoft_Json)/lib/netstandard2.0/Newtonsoft.Json.dll" CopyToOutputDirectory="PreserveNewest" />
+    <!-- <PackageReference Include="System.Text.Json" GeneratePathProperty="true" Version="8.0.5" />
+    <None Include="$(PKGSystem_Text_Json)/lib/netstandard2.0/System.Text.Json.dll" CopyToOutputDirectory="PreserveNewest" /> -->
   </ItemGroup>
 
-  <PropertyGroup>
+  <!-- <PropertyGroup>
     <GetTargetPathDependsOn>$(GetTargetPathDependsOn);GetDependencyTargetPaths</GetTargetPathDependsOn>
   </PropertyGroup>
   <Target Name="GetDependencyTargetPaths">
     <ItemGroup>
-      <TargetPathWithTargetPlatformMoniker Include="$(PKGNewtonsoft_Json)/lib/netstandard2.0/Newtonsoft.Json.dll" IncludeRuntimeDependency="false" />
+      <TargetPathWithTargetPlatformMoniker Include="$(PKGSystem_Text_Json)/lib/netstandard2.0/System.Text.Json.dll" IncludeRuntimeDependency="false" />
     </ItemGroup>
-  </Target>
+  </Target> -->
 </Project>
