--- a/benchmark/Altinn.App.Benchmarks/Altinn.App.Benchmarks.csproj
+++ b/benchmark/Altinn.App.Benchmarks/Altinn.App.Benchmarks.csproj
@@ -7,6 +7,7 @@
         <DebugType>pdbonly</DebugType>
         <DebugSymbols>true</DebugSymbols>
         <GenerateDocumentationFile>false</GenerateDocumentationFile>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
     <ItemGroup>
         <Using Include="BenchmarkDotNet.Attributes" />
