--- a/test/Altinn.App.Analyzers.Tests/testapp/App/App.csproj
+++ b/test/Altinn.App.Analyzers.Tests/testapp/App/App.csproj
@@ -3,25 +3,35 @@
     <TargetFramework>net8.0</TargetFramework>
     <AssemblyName>Altinn.Application</AssemblyName>
     <RootNamespace>Altinn.App</RootNamespace>
+
+    <!-- This let's us test with local NuGet packages, just put the .nupkg in the ../packages directory -->
+    <RestoreSources>../packages;https://api.nuget.org/v3/index.json</RestoreSources>
   </PropertyGroup>
+
   <ItemGroup>
-    <!-- <PackageReference Include="Altinn.App.Api" Version="8.0.0">
+    <!-- Test files that are added in the Roslyn workspace as needed during tests -->
+    <Compile Remove="additional/*.cs" />
+  </ItemGroup>
+
+  <Target Name="Output" AfterTargets="Build">
+    <Message Importance="High" Text="IsAltinnApp = $(IsAltinnApp)" />
+  </Target>
+
+  <ItemGroup>
+    <!-- <PackageReference Include="Altinn.App.Api" Version="8.6.0-preview.4.56">
       <CopyToOutputDirectory>lib\$(TargetFramework)\*.xml</CopyToOutputDirectory>
     </PackageReference>
-    <PackageReference Include="Altinn.App.Core" Version="8.0.0" /> -->
+    <PackageReference Include="Altinn.App.Core" Version="8.6.0-preview.4.56" /> -->
+
     <ProjectReference Include="../../../../src/Altinn.App.Core/Altinn.App.Core.csproj" />
     <ProjectReference Include="../../../../src/Altinn.App.Api/Altinn.App.Api.csproj">
         <CopyToOutputDirectory>lib\$(TargetFramework)\*.xml</CopyToOutputDirectory>
     </ProjectReference>
     <ProjectReference Include="../../../../src/Altinn.App.Analyzers/Altinn.App.Analyzers.csproj" PrivateAssets="all" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
-
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\script\" />
-
-    <Compile Remove="additional/*.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Update="config\process\process.bpmn">
