Uses code analyzer and fixes problems exposed

--- a/src/Altinn.App.Clients.Fiks/Altinn.App.Clients.Fiks.csproj
+++ b/src/Altinn.App.Clients.Fiks/Altinn.App.Clients.Fiks.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../Altinn.App.Internal.Analyzers/Altinn.App.Internal.Analyzers.csproj" PrivateAssets="all" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
+  </ItemGroup>
+
+  <ItemGroup>
     <InternalsVisibleTo Include="Altinn.App.Clients.Fiks.Tests" />
     <InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
   </ItemGroup>
