Improve test setup..

--- a/test/Altinn.App.Analyzers.Tests/Altinn.App.Analyzers.Tests.csproj
+++ b/test/Altinn.App.Analyzers.Tests/Altinn.App.Analyzers.Tests.csproj
@@ -30,7 +30,7 @@
     <!--
       This is just to enforce that the project builds completely before tests in this project runs.
       This is necessery because there are fixtures (e.g. testapp) that depend on Altinn.App.Core
-      and we will have race conditions if `dotnet test` is run in parallel with tests depending on these fixtures.
+      and we may have race conditions if `dotnet test` is run in parallel with tests depending on these fixtures.
     -->
     <ProjectReference Include="../../src/Altinn.App.Core/Altinn.App.Core.csproj" />
 
