--- a/test/Altinn.App.Core.Tests/Altinn.App.Core.Tests.csproj
+++ b/test/Altinn.App.Core.Tests/Altinn.App.Core.Tests.csproj
@@ -10,7 +10,7 @@
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
 
-    <NoWarn>$(NoWarn);CS1591;CS0618;ALTINNAPP0200</NoWarn>
+    <NoWarn>$(NoWarn);CS1591;CS0618</NoWarn>
     <!--
       CS1591: Don't warn for missing XML doc
       CS0618: This is a test project, so we usually continue testing [Obsolete] apis
