--- a/benchmark/Altinn.App.Benchmarks/Altinn.App.Benchmarks.csproj
+++ b/benchmark/Altinn.App.Benchmarks/Altinn.App.Benchmarks.csproj
@@ -8,6 +8,7 @@
         <DebugSymbols>true</DebugSymbols>
         <GenerateDocumentationFile>false</GenerateDocumentationFile>
         <IsPackable>false</IsPackable>
+        <SonarQubeExclude>true</SonarQubeExclude>
     </PropertyGroup>
     <ItemGroup>
         <Using Include="BenchmarkDotNet.Attributes" />
