--- a/test/Altinn.App.Clients.Fiks.Tests/Altinn.App.Clients.Fiks.Tests.csproj
+++ b/test/Altinn.App.Clients.Fiks.Tests/Altinn.App.Clients.Fiks.Tests.csproj
@@ -15,6 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.TimeProvider.Testing" Version="8.10.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
     <PackageReference Include="Polly.Testing" Version="8.5.2" />
     <PackageReference Include="Microsoft.FeatureManagement.AspNetCore" Version="4.0.0" />
