--- a/src/Altinn.App.Internal.Analyzers/Altinn.App.Internal.Analyzers.csproj
+++ b/src/Altinn.App.Internal.Analyzers/Altinn.App.Internal.Analyzers.csproj
@@ -34,7 +34,7 @@
   </ItemGroup> -->
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.10.0" PrivateAssets="all" />
-    <PackageReference Include="PolySharp" Version="1.15.0" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" PrivateAssets="all" />
+    <PackageReference Include="PolySharp" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
   </ItemGroup>
 </Project>
