--- a/test/Altinn.App.Tests.Common/Altinn.App.Tests.Common.csproj
+++ b/test/Altinn.App.Tests.Common/Altinn.App.Tests.Common.csproj
@@ -15,10 +15,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Diagnostics.Testing" Version="8.10.0" />
-    <PackageReference Include="Verify.Xunit" Version="28.16.0" />
-    <PackageReference Include="xunit.assert" Version="2.9.3" />
-    <PackageReference Include="OpenTelemetry" Version="1.11.2" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.Testing"/>
+    <PackageReference Include="Verify.Xunit"/>
+    <PackageReference Include="xunit.assert"/>
+    <PackageReference Include="OpenTelemetry"/>
   </ItemGroup>
 
   <ItemGroup>
