--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -52,7 +52,7 @@ jobs:
             ${{ runner.os }}-nuget-
 
       - name: Restore
-        run: dotnet restore -p:Deterministic=true -p:BuildNumber=${{ github.run_number }}
+        run: dotnet restore solutions/All.sln
 
       - name: Build
         run: dotnet build -c Release --no-restore -p:Deterministic=true -p:BuildNumber=${{ github.run_number }}
