--- a/src/Altinn.App.Clients.Fiks/Altinn.App.Clients.Fiks.csproj
+++ b/src/Altinn.App.Clients.Fiks/Altinn.App.Clients.Fiks.csproj
@@ -9,9 +9,9 @@
     <ProjectReference Include="../Altinn.App.Core/Altinn.App.Core.csproj"/>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="KS.Fiks.Arkiv.Models.V1" Version="1.0.4"/>
-    <PackageReference Include="KS.Fiks.IO.Client" Version="6.0.0"/>
-    <PackageReference Include="Polly.Extensions" Version="8.5.2" />
+    <PackageReference Include="KS.Fiks.Arkiv.Models.V1" />
+    <PackageReference Include="KS.Fiks.IO.Client" />
+    <PackageReference Include="Polly.Extensions" />
   </ItemGroup>
 
   <ItemGroup>
