--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -54,6 +54,7 @@
     <PackageVersion Include="xunit" Version="2.9.3" />
     <PackageVersion Include="xunit.assert" Version="2.9.3" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="3.0.2" />
+    <PackageVersion Include="Polly.Testing" Version="8.5.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -63,5 +64,11 @@
     <PackageVersion Include="Microsoft.Rest.ClientRuntime.Azure" Version="3.3.19" />
     <PackageVersion Include="System.Text.RegularExpressions" Version="4.3.1" />
     <!-- End JWTCookieAuthentication deps -->
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageVersion Include="KS.Fiks.Arkiv.Models.V1" Version="1.0.4"/>
+    <PackageVersion Include="KS.Fiks.IO.Client" Version="6.0.0"/>
+    <PackageVersion Include="Polly.Extensions" Version="8.5.2" />
   </ItemGroup>
 </Project>
