--- a/test/Altinn.App.Analyzers.Tests/Altinn.App.Analyzers.Tests.csproj
+++ b/test/Altinn.App.Analyzers.Tests/Altinn.App.Analyzers.Tests.csproj
@@ -24,6 +24,8 @@
 
     <PackageReference Include="Buildalyzer.Workspaces"/>
     <PackageReference Include="System.Formats.Asn1"/>
+        <!-- Add explicit reference to patched version to override vulnerable dependency -->
+    <PackageReference Include="Microsoft.Build.Tasks.Core"/>
   </ItemGroup>
 
   <ItemGroup>
